--- a/video.html
+++ b/video.html
@@ -115,6 +115,10 @@
             <div class="row mb-5">
               <div class="col-12 ">
                 <h2 class="site-section-heading text-center" style="color:#d32f2f;">Video Gallery</h2>
+                <div class="gallery-description text-center mb-4" style="max-width:700px;margin:0 auto 2rem auto;font-size:1.15rem;color:#444;">
+                  <!-- Write your video gallery description here -->
+                  <p>Welcome to our curated video gallery. Here you will find cinematic highlights, pre-wedding stories, and memorable moments from our recent projects. Explore and enjoy the artistry!</p>
+                </div>
               </div>
             </div>
           </div>
