--- a/single.html
+++ b/single.html
@@ -117,6 +117,10 @@
             <div class="row mb-5">
               <div class="col-12 ">
                 <h2 class="site-section-heading text-center text-black">Portrait Gallery</h2>
+                <div class="gallery-description text-center mb-4" style="max-width:700px;margin:0 auto 2rem auto;font-size:1.15rem;color:#444;">
+                  <!-- Write your gallery description here -->
+                  <p>Welcome to our portrait gallery. Discover a curated selection of our favorite moments, capturing the essence and personality of each subject. Enjoy browsing the collection!</p>
+                </div>
               </div>
             </div>
           </div>
