--- a/single.html
+++ b/single.html
@@ -248,15 +248,14 @@
       </div>
     </div>
 
-    <div class="footer py-4">
+
+    <footer class="site-footer py-4">
       <div class="container-fluid text-center">
         <p>
-          <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-          <!-- Copyright and Colorlib attribution removed -->
-          <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+          &copy; <script>document.write(new Date().getFullYear());</script> Pallab Photography. All rights reserved. | Website by <a href="https://www.thevedicwedding.com" target="_blank" rel="noopener">The Vedic Wedding</a>
         </p>
       </div>
-    </div>
+    </footer>
 
     
 
