--- a/video.html
+++ b/video.html
@@ -230,13 +230,21 @@
       </div>
     </div>
 
-    <div class="footer py-4">
-      <div class="container-fluid text-center">
-        <p>
-          &copy; <script>document.write(new Date().getFullYear());</script> Pallab Photography. All rights reserved. | Website by <a href="https://www.thevedicwedding.com" target="_blank" rel="noopener">The Vedic Wedding</a>
-        </p>
+
+    <footer class="site-footer">
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-md-12 text-center">
+            <p class="mb-2" style="font-size:1.05rem;">
+              &copy; <script>document.write(new Date().getFullYear());</script> Pallab Photography. All rights reserved.
+            </p>
+            <p class="mb-0" style="font-size:0.98rem; color:#bbb;">
+              Website by <a href="https://www.thevedicwedding.com" target="_blank" rel="noopener" style="color:#fff;text-decoration:underline;">The Vedic Wedding</a>
+            </p>
+          </div>
+        </div>
       </div>
-    </div>
+    </footer>
 
     
 
