--- a/index.html
+++ b/index.html
@@ -200,15 +200,18 @@
       </div>
     </div>
 
-    <div class="footer py-4">
-      <div class="container-fluid text-center">
-        <p>
-          <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-          Copyright &copy;<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank" >Colorlib</a>
-          <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-        </p>
+    <footer class="site-footer mt-5">
+      <div class="container-fluid">
+        <div class="row align-items-center">
+          <div class="col-md-6 text-center text-md-left mb-2 mb-md-0">
+            <span>&copy; <script>document.write(new Date().getFullYear());</script> Pallab Photography. All rights reserved.</span>
+          </div>
+          <div class="col-md-6 text-center text-md-right">
+            <span>Website by <a href="https://www.thevedicwedding.com" target="_blank" rel="noopener">The Vedic Wedding</a></span>
+          </div>
+        </div>
       </div>
-    </div>
+    </footer>
 
     
 
