--- a/index.html
+++ b/index.html
@@ -200,17 +200,8 @@
       </div>
     </div>
 
-    <footer class="site-footer mt-5">
-      <div class="container-fluid">
-        <div class="row align-items-center">
-          <div class="col-md-6 text-center text-md-left mb-2 mb-md-0">
-            <span>&copy; <script>document.write(new Date().getFullYear());</script> Pallab Photography. All rights reserved.</span>
-          </div>
-          <div class="col-md-6 text-center text-md-right">
-            <span>Website by <a href="https://www.thevedicwedding.com" target="_blank" rel="noopener">The Vedic Wedding</a></span>
-          </div>
-        </div>
-      </div>
+    <footer class="site-footer-custom">
+      <div class="footer-content">© 2025 Pallab Photography</div>
     </footer>
 
     
@@ -219,6 +210,25 @@
     
   </div>
 
+  <style>
+    .site-footer-custom {
+      background: #D4C9BE;
+      color: #111;
+      text-align: center;
+      padding: 18px 0 14px 0;
+      font-size: 1.08rem;
+      font-family: 'Josefin Sans', Arial, sans-serif;
+      border-top: none;
+      margin-top: 40px;
+      letter-spacing: 0.01em;
+      box-shadow: 0 -1px 6px rgba(0,0,0,0.03);
+    }
+    .site-footer-custom .footer-content {
+      margin: 0 auto;
+      font-weight: 500;
+      letter-spacing: 0.01em;
+    }
+  </style>
   <script src="js/jquery-3.3.1.min.js"></script>
   <script src="js/jquery-migrate-3.0.1.min.js"></script>
   <script src="js/jquery-ui.js"></script>
