--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Photosen &mdash; Colorlib Website Template</title>
+  <title>About &mdash; The Vedic Wedding</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -172,17 +172,8 @@
       </div>
     </div>
 
-    <footer class="site-footer mt-5">
-      <div class="container-fluid">
-        <div class="row align-items-center">
-          <div class="col-md-6 text-center text-md-left mb-2 mb-md-0">
-            <span>&copy; <script>document.write(new Date().getFullYear());</script> Pallab Photography. All rights reserved.</span>
-          </div>
-          <div class="col-md-6 text-center text-md-right">
-            <span>Website by <a href="https://www.thevedicwedding.com" target="_blank" rel="noopener">The Vedic Wedding</a></span>
-          </div>
-        </div>
-      </div>
+    <footer class="site-footer-custom">
+      <div class="footer-content">© 2025 Pallab Photography</div>
     </footer>
 
     
