--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Photosen &mdash; Colorlib Website Template</title>
+<title>Contact &mdash; The Vedic Wedding </title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -190,12 +190,8 @@
 </div>
 
 
-<footer class="site-footer py-4">
-  <div class="container-fluid text-center">
-    <p>
-      &copy; <script>document.write(new Date().getFullYear());</script> Pallab Photography. All rights reserved. | Website by <a href="https://www.thevedicwedding.com" target="_blank" rel="noopener">The Vedic Wedding</a>
-    </p>
-  </div>
+<footer class="site-footer-custom">
+  <div class="footer-content">© 2025 Pallab Photography</div>
 </footer>
 
 
@@ -203,6 +199,25 @@
 
 
 </div>
+<style>
+  .site-footer-custom {
+    background: #D4C9BE;
+    color: #111;
+    text-align: center;
+    padding: 18px 0 14px 0;
+    font-size: 1.08rem;
+    font-family: 'Josefin Sans', Arial, sans-serif;
+    border-top: none;
+    margin-top: 40px;
+    letter-spacing: 0.01em;
+    box-shadow: 0 -1px 6px rgba(0,0,0,0.03);
+  }
+  .site-footer-custom .footer-content {
+    margin: 0 auto;
+    font-weight: 500;
+    letter-spacing: 0.01em;
+  }
+</style>
 
 <script src="js/jquery-3.3.1.min.js"></script>
 <script src="js/jquery-migrate-3.0.1.min.js"></script>
