--- a/contact.html
+++ b/contact.html
@@ -164,7 +164,7 @@
 
 <div class="row form-group">
 <div class="col-md-12">
-<input type="submit" value="Send Message" class="btn btn-primary py-2 px-4 text-white">
+<input type="submit" value="Send Message" class="btn btn-primary py-2 px-4 text-white" style="background:#123458; border-color:#123458;">
 </div>
 </div>
 
@@ -177,15 +177,24 @@
 <p class="mb-4">Shop no-3, AS-3, Block- B Arjunpur, Kolkata - 700059</p>
 
 <p class="mb-0 font-weight-bold text-black">Phone</p>
-<p class="mb-4"><a href="tel:+919007900710">+91 9007900710</a></p>
+<p class="mb-4"><a href="tel:+919007900710" style="color:#123458;">+91 9007900710</a></p>
 
 <p class="mb-0 font-weight-bold text-black">Email Address</p>
-<p class="mb-0"><a href="mailto:thevedicwedding@gmail.com">thevedicwedding@gmail.com</a></p>
+<p class="mb-0"><a href="mailto:thevedicwedding@gmail.com" style="color:#123458;">thevedicwedding@gmail.com</a></p>
 
-</div>
-<div class="mb-3">
-  <iframe src="https://www.google.com/maps?q=Shop+no-3,+AS-3,+Block-+B+Arjunpur,+Kolkata+-+700059&output=embed" width="100%" height="220" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
-</div>
+  </div>
+  <div class="mb-3">
+    <iframe src="https://www.google.com/maps?q=Shop+no-3,+AS-3,+Block-+B+Arjunpur,+Kolkata+-+700059&output=embed" width="100%" height="220" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+  </div>
+  <div class="mb-3">
+    <nav style="background:#f5f5f5; border-radius:8px; padding:10px 0; text-align:center; margin-top:10px;">
+      <a href="index.html" style="color:#123458; font-weight:600; margin:0 18px; text-decoration:none;">Home</a>
+      <a href="single.html" style="color:#123458; font-weight:600; margin:0 18px; text-decoration:none;">Gallery</a>
+      <a href="video.html" style="color:#123458; font-weight:600; margin:0 18px; text-decoration:none;">Video</a>
+      <a href="about.html" style="color:#123458; font-weight:600; margin:0 18px; text-decoration:none;">About</a>
+      <a href="contact.html" style="color:#123458; font-weight:600; margin:0 18px; text-decoration:none;">Contact</a>
+    </nav>
+  </div>
 
 </div>
 </div>
