--- a/contact.html
+++ b/contact.html
@@ -116,7 +116,10 @@
 <div class="col-md-7">
 <div class="row mb-5">
 <div class="col-12 ">
-<h2 class="site-section-heading text-center text-black">Contact</h2>
+</h2>
+<div class="contact-description text-center mb-4" style="max-width:700px;margin:0 auto 2rem auto;font-size:1.13rem;color:#444;">
+  <p>We'd love to hear from you! Please fill out the form below to get in touch for bookings, collaborations, or any questions. We'll respond as soon as possible.</p>
+</div>
 </div>
 </div>
 </div>
