--- a/about.html
+++ b/about.html
@@ -172,9 +172,29 @@
       </div>
     </div>
 
+
     <footer class="site-footer-custom">
       <div class="footer-content">© 2025 Pallab Photography</div>
     </footer>
+    <style>
+      .site-footer-custom {
+        background: #D4C9BE;
+        color: #111;
+        text-align: center;
+        padding: 18px 0 14px 0;
+        font-size: 1.08rem;
+        font-family: 'Josefin Sans', Arial, sans-serif;
+        border-top: none;
+        margin-top: 40px;
+        letter-spacing: 0.01em;
+        box-shadow: 0 -1px 6px rgba(0,0,0,0.03);
+      }
+      .site-footer-custom .footer-content {
+        margin: 0 auto;
+        font-weight: 500;
+        letter-spacing: 0.01em;
+      }
+    </style>
 
     
 
