--- a/contact.html
+++ b/contact.html
@@ -116,10 +116,10 @@
 <div class="col-md-7">
 <div class="row mb-5">
 <div class="col-12 ">
-</h2>
-<div class="contact-description text-center mb-4" style="max-width:700px;margin:0 auto 2rem auto;font-size:1.13rem;color:#444;">
-  <p>We'd love to hear from you! Please fill out the form below to get in touch for bookings, collaborations, or any questions. We'll respond as soon as possible.</p>
-</div>
+  <h2 class="site-section-heading text-center text-black">Contact</h2>
+  <div class="contact-description text-center mb-4" style="max-width:700px;margin:0 auto 2rem auto;font-size:1.13rem;color:#444;">
+    <p>We'd love to hear from you! Please fill out the form below to get in touch for bookings, collaborations, or any questions. We'll respond as soon as possible.</p>
+  </div>
 </div>
 </div>
 </div>
@@ -189,14 +189,8 @@
   <div class="mb-3">
     <iframe src="https://www.google.com/maps?q=Shop+no-3,+AS-3,+Block-+B+Arjunpur,+Kolkata+-+700059&output=embed" width="100%" height="220" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
   </div>
-  <div class="mb-3">
-    <nav style="background:#f5f5f5; border-radius:8px; padding:10px 0; text-align:center; margin-top:10px;">
-      <a href="index.html" style="color:#123458; font-weight:600; margin:0 18px; text-decoration:none;">Home</a>
-      <a href="single.html" style="color:#123458; font-weight:600; margin:0 18px; text-decoration:none;">Gallery</a>
-      <a href="video.html" style="color:#123458; font-weight:600; margin:0 18px; text-decoration:none;">Video</a>
-      <a href="about.html" style="color:#123458; font-weight:600; margin:0 18px; text-decoration:none;">About</a>
-      <a href="contact.html" style="color:#123458; font-weight:600; margin:0 18px; text-decoration:none;">Contact</a>
-    </nav>
+  <div class="mb-3" style="text-align:center;">
+    <a href="https://www.google.com/maps/dir/?api=1&destination=Shop+no-3,+AS-3,+Block-+B+Arjunpur,+Kolkata+-+700059" target="_blank" rel="noopener" style="display:inline-block;background:#123458;color:#fff;font-weight:600;padding:10px 28px;border-radius:6px;text-decoration:none;font-size:1.08rem;box-shadow:0 2px 8px rgba(0,0,0,0.06);margin-top:8px;">Navigate with Google Maps</a>
   </div>
 
 </div>
