--- a/index.html
+++ b/index.html
@@ -115,13 +115,13 @@
 
 
     <!-- Image Slider Start: now visible on all devices -->
-    <div class="site-blocks-cover overlay" data-aos="fade" id="home-slider" style="padding: 0; background: none; border: none; box-shadow: none;">
-      <div class="slide-one-item home-slider owl-carousel">
-        <div class="slide-item" style="background-image: url('images/img_1.jpg'); min-height: 350px; height: 60vh; background-size: cover; background-position: center; border: none; box-shadow: none;"></div>
-        <div class="slide-item" style="background-image: url('images/img_2.jpg'); min-height: 350px; height: 60vh; background-size: cover; background-position: center; border: none; box-shadow: none;"></div>
-        <div class="slide-item" style="background-image: url('images/img_3.jpg'); min-height: 350px; height: 60vh; background-size: cover; background-position: center; border: none; box-shadow: none;"></div>
-        <div class="slide-item" style="background-image: url('images/img_4.jpg'); min-height: 350px; height: 60vh; background-size: cover; background-position: center; border: none; box-shadow: none;"></div>
-        <div class="slide-item" style="background-image: url('images/img_5.jpg'); min-height: 350px; height: 60vh; background-size: cover; background-position: center; border: none; box-shadow: none;"></div>
+    <div class="site-blocks-cover overlay" data-aos="fade" id="home-slider" style="padding: 0; background: none; border: none; box-shadow: none; min-height: 100vh; height: 100vh; width: 100vw; position: relative;">
+      <div class="slide-one-item home-slider owl-carousel" style="height: 100vh; width: 100vw;">
+        <div class="slide-item" style="background-image: url('images/img_1.jpg'); min-height: 100vh; height: 100vh; width: 100vw; background-size: cover; background-position: center; border: none; box-shadow: none;"></div>
+        <div class="slide-item" style="background-image: url('images/img_2.jpg'); min-height: 100vh; height: 100vh; width: 100vw; background-size: cover; background-position: center; border: none; box-shadow: none;"></div>
+        <div class="slide-item" style="background-image: url('images/img_3.jpg'); min-height: 100vh; height: 100vh; width: 100vw; background-size: cover; background-position: center; border: none; box-shadow: none;"></div>
+        <div class="slide-item" style="background-image: url('images/img_4.jpg'); min-height: 100vh; height: 100vh; width: 100vw; background-size: cover; background-position: center; border: none; box-shadow: none;"></div>
+        <div class="slide-item" style="background-image: url('images/img_5.jpg'); min-height: 100vh; height: 100vh; width: 100vw; background-size: cover; background-position: center; border: none; box-shadow: none;"></div>
       </div>
     </div>
     <!-- Image Slider End -->
@@ -234,15 +234,37 @@
     }
     /* Responsive slider height and text for mobile */
     @media (max-width: 991.98px) {
+      .site-blocks-cover,
+      .site-blocks-cover .slide-one-item,
       .site-blocks-cover .slide-item {
-        min-height: 180px !important;
-        height: 36vh !important;
+        min-height: 100vh !important;
+        height: 100vh !important;
+        width: 100vw !important;
+        padding: 0 !important;
+        margin: 0 !important;
       }
       .display-4 {
         font-size: 2rem;
       }
       .slider-spacer {
         height: 16px !important;
+      }
+      body {
+        padding-top: 0 !important;
+      }
+    }
+    @media (min-width: 992px) {
+      .site-blocks-cover,
+      .site-blocks-cover .slide-one-item,
+      .site-blocks-cover .slide-item {
+        min-height: 100vh !important;
+        height: 100vh !important;
+        width: 100vw !important;
+        padding: 0 !important;
+        margin: 0 !important;
+      }
+      body {
+        padding-top: 0 !important;
       }
     }
   </style>
