--- a/index.html
+++ b/index.html
@@ -115,13 +115,13 @@
 
 
     <!-- Image Slider Start: now visible on all devices -->
-    <div class="site-blocks-cover overlay" data-aos="fade" id="home-slider" style="padding: 0; background: none; border: none; box-shadow: none; min-height: 100vh; height: 100vh; width: 100vw; position: relative;">
+    <div class="site-blocks-cover overlay" data-aos="fade" id="home-slider" style="padding: 0; background: #000; border: none; box-shadow: none; min-height: 100vh; height: 100vh; width: 100vw; position: relative;">
       <div class="slide-one-item home-slider owl-carousel" style="height: 100vh; width: 100vw;">
-        <div class="slide-item" style="background-image: url('images/img_1.jpg'); min-height: 100vh; height: 100vh; width: 100vw; background-size: cover; background-position: center; border: none; box-shadow: none;"></div>
-        <div class="slide-item" style="background-image: url('images/img_2.jpg'); min-height: 100vh; height: 100vh; width: 100vw; background-size: cover; background-position: center; border: none; box-shadow: none;"></div>
-        <div class="slide-item" style="background-image: url('images/img_3.jpg'); min-height: 100vh; height: 100vh; width: 100vw; background-size: cover; background-position: center; border: none; box-shadow: none;"></div>
-        <div class="slide-item" style="background-image: url('images/img_4.jpg'); min-height: 100vh; height: 100vh; width: 100vw; background-size: cover; background-position: center; border: none; box-shadow: none;"></div>
-        <div class="slide-item" style="background-image: url('images/img_5.jpg'); min-height: 100vh; height: 100vh; width: 100vw; background-size: cover; background-position: center; border: none; box-shadow: none;"></div>
+        <div class="slide-item" style="background-image: url('images/img_1.jpg'); min-height: 100vh; height: 100vh; width: 100vw; background-size: cover; background-position: center; background-color: #000; border: none; box-shadow: none;"></div>
+        <div class="slide-item" style="background-image: url('images/img_2.jpg'); min-height: 100vh; height: 100vh; width: 100vw; background-size: cover; background-position: center; background-color: #000; border: none; box-shadow: none;"></div>
+        <div class="slide-item" style="background-image: url('images/img_3.jpg'); min-height: 100vh; height: 100vh; width: 100vw; background-size: cover; background-position: center; background-color: #000; border: none; box-shadow: none;"></div>
+        <div class="slide-item" style="background-image: url('images/img_4.jpg'); min-height: 100vh; height: 100vh; width: 100vw; background-size: cover; background-position: center; background-color: #000; border: none; box-shadow: none;"></div>
+        <div class="slide-item" style="background-image: url('images/img_5.jpg'); min-height: 100vh; height: 100vh; width: 100vw; background-size: cover; background-position: center; background-color: #000; border: none; box-shadow: none;"></div>
       </div>
     </div>
     <!-- Image Slider End -->
@@ -242,6 +242,13 @@
         width: 100vw !important;
         padding: 0 !important;
         margin: 0 !important;
+        background: #000 !important;
+      }
+      .slide-item {
+        background-size: cover !important;
+        background-position: center !important;
+        background-repeat: no-repeat !important;
+        background-color: #000 !important;
       }
       .display-4 {
         font-size: 2rem;
