--- a/index.html
+++ b/index.html
@@ -117,11 +117,11 @@
     <!-- Image Slider Start: now visible on all devices -->
     <div class="site-blocks-cover overlay" data-aos="fade" id="home-slider" style="padding: 0; background: #000; border: none; box-shadow: none; min-height: 100vh; height: 100vh; width: 100vw; position: relative;">
       <div class="slide-one-item home-slider owl-carousel">
-        <div class="slide-item" style="background-image: url('images/img_1.jpg'); min-height: 350px; height: 38vh; max-height: 420px; width: 100vw; background-size: cover; background-position: center; background-color: #000; border: none; box-shadow: none;"></div>
-        <div class="slide-item" style="background-image: url('images/img_2.jpg'); min-height: 350px; height: 38vh; max-height: 420px; width: 100vw; background-size: cover; background-position: center; background-color: #000; border: none; box-shadow: none;"></div>
-        <div class="slide-item" style="background-image: url('images/img_3.jpg'); min-height: 350px; height: 38vh; max-height: 420px; width: 100vw; background-size: cover; background-position: center; background-color: #000; border: none; box-shadow: none;"></div>
-        <div class="slide-item" style="background-image: url('images/img_4.jpg'); min-height: 350px; height: 38vh; max-height: 420px; width: 100vw; background-size: cover; background-position: center; background-color: #000; border: none; box-shadow: none;"></div>
-        <div class="slide-item" style="background-image: url('images/img_5.jpg'); min-height: 350px; height: 38vh; max-height: 420px; width: 100vw; background-size: cover; background-position: center; background-color: #000; border: none; box-shadow: none;"></div>
+        <div class="slide-item" style="background-image: url('images/img_1.jpg'); min-height: 350px; height: 38vh; max-height: 420px; width: 100vw; background-size: cover; background-position: center; background-color: #000; border: none; box-shadow: none; display: block;"></div>
+        <div class="slide-item" style="background-image: url('images/img_2.jpg'); min-height: 350px; height: 38vh; max-height: 420px; width: 100vw; background-size: cover; background-position: center; background-color: #000; border: none; box-shadow: none; display: block;"></div>
+        <div class="slide-item" style="background-image: url('images/img_3.jpg'); min-height: 350px; height: 38vh; max-height: 420px; width: 100vw; background-size: cover; background-position: center; background-color: #000; border: none; box-shadow: none; display: block;"></div>
+        <div class="slide-item" style="background-image: url('images/img_4.jpg'); min-height: 350px; height: 38vh; max-height: 420px; width: 100vw; background-size: cover; background-position: center; background-color: #000; border: none; box-shadow: none; display: block;"></div>
+        <div class="slide-item" style="background-image: url('images/img_5.jpg'); min-height: 350px; height: 38vh; max-height: 420px; width: 100vw; background-size: cover; background-position: center; background-color: #000; border: none; box-shadow: none; display: block;"></div>
       </div>
     </div>
     <!-- Image Slider End -->
@@ -255,15 +255,17 @@
         background-position: center !important;
         background-repeat: no-repeat !important;
         background-color: #000 !important;
+        display: block !important;
       }
       .display-4 {
         font-size: 2rem;
+        margin-top: 70px !important;
       }
       .slider-spacer {
         height: 16px !important;
       }
       body {
-        padding-top: 0 !important;
+        padding-top: 60px !important;
       }
     }
     @media (min-width: 992px) {
