--- a/video.html
+++ b/video.html
@@ -125,106 +125,123 @@
         </div>
         <div id="youtube-gallery">
           <!-- Zig-zag video gallery layout -->
-          <div class="row align-items-center mb-5 flex-md-row flex-column-reverse">
-            <div class="col-md-6 mb-3 mb-md-0">
+          <!-- Video 1 -->
+          <div class="row align-items-center mb-5 flex-md-row flex-column">
+            <div class="col-md-6 mb-3 mb-md-0 order-1 order-md-1">
               <div class="embed-responsive embed-responsive-16by9">
                 <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/3lRZ-4-M_Y8" allowfullscreen></iframe>
               </div>
             </div>
-            <div class="col-md-6 text-md-left text-center">
-              <h4 style="color:#d32f2f;font-weight:600;">Vikash x Neha Cinematic Pre Wedding</h4>
+            <div class="col-md-6 text-center order-2 order-md-2">
+              <h4 class="video-title-mobile-below" style="color:#d32f2f;font-weight:600;">Vikash x Neha Cinematic Pre Wedding</h4>
             </div>
           </div>
+          <!-- Video 2 -->
           <div class="row align-items-center mb-5 flex-md-row flex-column">
-            <div class="col-md-6 text-md-right text-center order-md-1 order-2">
-              <h4 style="color:#d32f2f;font-weight:600;">Video 2</h4>
-            </div>
-            <div class="col-md-6 order-md-2 order-1 mb-3 mb-md-0">
+            <div class="col-md-6 mb-3 mb-md-0 order-1 order-md-2">
               <div class="embed-responsive embed-responsive-16by9">
                 <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/TjPSY4gENOI" allowfullscreen></iframe>
               </div>
             </div>
+            <div class="col-md-6 text-center order-2 order-md-1">
+              <h4 class="video-title-mobile-below" style="color:#d32f2f;font-weight:600;">Video 2</h4>
+            </div>
           </div>
-          <div class="row align-items-center mb-5 flex-md-row flex-column-reverse">
-            <div class="col-md-6 mb-3 mb-md-0">
+          <!-- Video 3 -->
+          <div class="row align-items-center mb-5 flex-md-row flex-column">
+            <div class="col-md-6 mb-3 mb-md-0 order-1 order-md-1">
               <div class="embed-responsive embed-responsive-16by9">
                 <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/1lnyhnQO2K8" allowfullscreen></iframe>
               </div>
             </div>
-            <div class="col-md-6 text-md-left text-center">
-              <h4 style="color:#d32f2f;font-weight:600;">Video 3</h4>
+            <div class="col-md-6 text-center order-2 order-md-2">
+              <h4 class="video-title-mobile-below" style="color:#d32f2f;font-weight:600;">Video 3</h4>
             </div>
           </div>
+          <!-- Video 4 -->
           <div class="row align-items-center mb-5 flex-md-row flex-column">
-            <div class="col-md-6 text-md-right text-center order-md-1 order-2">
-              <h4 style="color:#d32f2f;font-weight:600;">Video 4</h4>
-            </div>
-            <div class="col-md-6 order-md-2 order-1 mb-3 mb-md-0">
+            <div class="col-md-6 mb-3 mb-md-0 order-1 order-md-2">
               <div class="embed-responsive embed-responsive-16by9">
                 <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/psY54piaY-k" allowfullscreen></iframe>
               </div>
             </div>
+            <div class="col-md-6 text-center order-2 order-md-1">
+              <h4 class="video-title-mobile-below" style="color:#d32f2f;font-weight:600;">Video 4</h4>
+            </div>
           </div>
-          <div class="row align-items-center mb-5 flex-md-row flex-column-reverse">
-            <div class="col-md-6 mb-3 mb-md-0">
+          <!-- Video 5 -->
+          <div class="row align-items-center mb-5 flex-md-row flex-column">
+            <div class="col-md-6 mb-3 mb-md-0 order-1 order-md-1">
               <div class="embed-responsive embed-responsive-16by9">
                 <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/qdNAdS_CEMo" allowfullscreen></iframe>
               </div>
             </div>
-            <div class="col-md-6 text-md-left text-center">
-              <h4 style="color:#d32f2f;font-weight:600;">Video 5</h4>
+            <div class="col-md-6 text-center order-2 order-md-2">
+              <h4 class="video-title-mobile-below" style="color:#d32f2f;font-weight:600;">Video 5</h4>
             </div>
           </div>
+          <!-- Video 6 -->
           <div class="row align-items-center mb-5 flex-md-row flex-column">
-            <div class="col-md-6 text-md-right text-center order-md-1 order-2">
-              <h4 style="color:#d32f2f;font-weight:600;">Video 6</h4>
-            </div>
-            <div class="col-md-6 order-md-2 order-1 mb-3 mb-md-0">
+            <div class="col-md-6 mb-3 mb-md-0 order-1 order-md-2">
               <div class="embed-responsive embed-responsive-16by9">
                 <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/07rQr1_PX2A" allowfullscreen></iframe>
               </div>
             </div>
+            <div class="col-md-6 text-center order-2 order-md-1">
+              <h4 class="video-title-mobile-below" style="color:#d32f2f;font-weight:600;">Video 6</h4>
+            </div>
           </div>
-          <div class="row align-items-center mb-5 flex-md-row flex-column-reverse">
-            <div class="col-md-6 mb-3 mb-md-0">
+          <!-- Video 7 -->
+          <div class="row align-items-center mb-5 flex-md-row flex-column">
+            <div class="col-md-6 mb-3 mb-md-0 order-1 order-md-1">
               <div class="embed-responsive embed-responsive-16by9">
                 <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/eWnsyaQcDpg" allowfullscreen></iframe>
               </div>
             </div>
-            <div class="col-md-6 text-md-left text-center">
-              <h4 style="color:#d32f2f;font-weight:600;">Video 7</h4>
+            <div class="col-md-6 text-center order-2 order-md-2">
+              <h4 class="video-title-mobile-below" style="color:#d32f2f;font-weight:600;">Video 7</h4>
             </div>
           </div>
+          <!-- Video 8 -->
           <div class="row align-items-center mb-5 flex-md-row flex-column">
-            <div class="col-md-6 text-md-right text-center order-md-1 order-2">
-              <h4 style="color:#d32f2f;font-weight:600;">Video 8</h4>
-            </div>
-            <div class="col-md-6 order-md-2 order-1 mb-3 mb-md-0">
+            <div class="col-md-6 mb-3 mb-md-0 order-1 order-md-2">
               <div class="embed-responsive embed-responsive-16by9">
                 <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/bEZT_v8qelw" allowfullscreen></iframe>
               </div>
             </div>
+            <div class="col-md-6 text-center order-2 order-md-1">
+              <h4 class="video-title-mobile-below" style="color:#d32f2f;font-weight:600;">Video 8</h4>
+            </div>
           </div>
-          <div class="row align-items-center mb-5 flex-md-row flex-column-reverse">
-            <div class="col-md-6 mb-3 mb-md-0">
+          <!-- Video 9 -->
+          <div class="row align-items-center mb-5 flex-md-row flex-column">
+            <div class="col-md-6 mb-3 mb-md-0 order-1 order-md-1">
               <div class="embed-responsive embed-responsive-16by9">
                 <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/WZo-QBcta8Y" allowfullscreen></iframe>
               </div>
             </div>
-            <div class="col-md-6 text-md-left text-center">
-              <h4 style="color:#d32f2f;font-weight:600;">Video 9</h4>
+            <div class="col-md-6 text-center order-2 order-md-2">
+              <h4 class="video-title-mobile-below" style="color:#d32f2f;font-weight:600;">Video 9</h4>
             </div>
           </div>
+          <!-- Video 10 -->
           <div class="row align-items-center mb-5 flex-md-row flex-column">
-            <div class="col-md-6 text-md-right text-center order-md-1 order-2">
-              <h4 style="color:#d32f2f;font-weight:600;">Video 10</h4>
-            </div>
-            <div class="col-md-6 order-md-2 order-1 mb-3 mb-md-0">
+            <div class="col-md-6 mb-3 mb-md-0 order-1 order-md-2">
               <div class="embed-responsive embed-responsive-16by9">
                 <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/yB1gTYN0l34" allowfullscreen></iframe>
               </div>
             </div>
+            <div class="col-md-6 text-center order-2 order-md-1">
+              <h4 class="video-title-mobile-below" style="color:#d32f2f;font-weight:600;">Video 10</h4>
+            </div>
           </div>
+    <style>
+      @media (max-width: 991.98px) {
+        .video-title-mobile-below {
+          margin-top: 1rem;
+        }
+      }
+    </style>
         </div>
         <!-- Removed YouTube video links prompt -->
       </div>
