--- a/index.html
+++ b/index.html
@@ -115,13 +115,13 @@
 
 
     <!-- Image Slider Start: now visible on all devices -->
-    <div class="site-blocks-cover overlay" data-aos="fade" id="home-slider" style="padding: 0; background: #000; border: none; box-shadow: none; min-height: 350px; height: 38vh; max-height: 420px; width: 100vw; position: relative;">
+    <div class="site-blocks-cover overlay" data-aos="fade" id="home-slider" style="padding: 0; background: #000; border: none; box-shadow: none; min-height: 350px; height: 38vh; max-height: 420px; width: 100vw; position: relative; border-radius: 0 !important;">
       <div class="slide-one-item home-slider owl-carousel">
-        <div class="slide-item" style="background-image: url('images/img_1.jpg'); min-height: 350px; height: 38vh; max-height: 420px; width: 100vw; background-size: cover; background-position: center; background-color: #000; border: none; box-shadow: none; display: block;"></div>
-        <div class="slide-item" style="background-image: url('images/img_2.jpg'); min-height: 350px; height: 38vh; max-height: 420px; width: 100vw; background-size: cover; background-position: center; background-color: #000; border: none; box-shadow: none; display: block;"></div>
-        <div class="slide-item" style="background-image: url('images/img_3.jpg'); min-height: 350px; height: 38vh; max-height: 420px; width: 100vw; background-size: cover; background-position: center; background-color: #000; border: none; box-shadow: none; display: block;"></div>
-        <div class="slide-item" style="background-image: url('images/img_4.jpg'); min-height: 350px; height: 38vh; max-height: 420px; width: 100vw; background-size: cover; background-position: center; background-color: #000; border: none; box-shadow: none; display: block;"></div>
-        <div class="slide-item" style="background-image: url('images/img_5.jpg'); min-height: 350px; height: 38vh; max-height: 420px; width: 100vw; background-size: cover; background-position: center; background-color: #000; border: none; box-shadow: none; display: block;"></div>
+        <div class="slide-item" style="background-image: url('images/img_1.jpg'); min-height: 350px; height: 38vh; max-height: 420px; width: 100vw; background-size: cover; background-position: center; background-color: #000; border: none !important; box-shadow: none !important; border-radius: 0 !important; display: block;"></div>
+        <div class="slide-item" style="background-image: url('images/img_2.jpg'); min-height: 350px; height: 38vh; max-height: 420px; width: 100vw; background-size: cover; background-position: center; background-color: #000; border: none !important; box-shadow: none !important; border-radius: 0 !important; display: block;"></div>
+        <div class="slide-item" style="background-image: url('images/img_3.jpg'); min-height: 350px; height: 38vh; max-height: 420px; width: 100vw; background-size: cover; background-position: center; background-color: #000; border: none !important; box-shadow: none !important; border-radius: 0 !important; display: block;"></div>
+        <div class="slide-item" style="background-image: url('images/img_4.jpg'); min-height: 350px; height: 38vh; max-height: 420px; width: 100vw; background-size: cover; background-position: center; background-color: #000; border: none !important; box-shadow: none !important; border-radius: 0 !important; display: block;"></div>
+        <div class="slide-item" style="background-image: url('images/img_5.jpg'); min-height: 350px; height: 38vh; max-height: 420px; width: 100vw; background-size: cover; background-position: center; background-color: #000; border: none !important; box-shadow: none !important; border-radius: 0 !important; display: block;"></div>
       </div>
     </div>
     <!-- Image Slider End -->
