--- a/video.html
+++ b/video.html
@@ -249,26 +249,127 @@
 
 
     <footer class="site-footer-custom">
-      <div class="footer-content">© 2025 Pallab Photography</div>
+      <div class="footer-main">
+        <div class="footer-section footer-socials">
+          <span class="footer-label">Socials</span>
+          <div class="footer-icons">
+            <a href="https://www.facebook.com/thevedicwedding" target="_blank" rel="noopener" aria-label="Facebook"><span class="icon-facebook"></span></a>
+            <a href="https://www.pinterest.com/thevedicwedding" target="_blank" rel="noopener" aria-label="Pinterest"><span class="icon-pinterest"></span></a>
+            <a href="https://www.behance.net/thevedicwedding" target="_blank" rel="noopener" aria-label="Behance"><span class="icon-behance"></span></a>
+            <a href="https://www.instagram.com/thevedicwedding" target="_blank" rel="noopener" aria-label="Instagram"><span class="icon-instagram"></span></a>
+            <a href="https://www.youtube.com/@thevedicwedding" target="_blank" rel="noopener" aria-label="YouTube"><span class="icon-youtube-play"></span></a>
+          </div>
+        </div>
+        <div class="footer-section footer-sitemap">
+          <span class="footer-label">Sitemap</span>
+          <ul class="footer-links">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="single.html">Gallery</a></li>
+            <li><a href="video.html">Video</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="contact.html">Contact</a></li>
+          </ul>
+        </div>
+        <div class="footer-section footer-contact">
+          <span class="footer-label">Contact</span>
+          <ul class="footer-links">
+            <li><a href="mailto:thevedicwedding@gmail.com">thevedicwedding@gmail.com</a></li>
+            <li><a href="tel:+919874747474">+91 98747 47474</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="footer-bottom">© 2025 Pallab Photography</div>
     </footer>
 
     <style>
       .site-footer-custom {
         background: #D4C9BE;
         color: #111;
-        text-align: center;
-        padding: 18px 0 14px 0;
-        font-size: 1.08rem;
-        font-family: 'Josefin Sans', Arial, sans-serif;
         border-top: none;
         margin-top: 40px;
-        letter-spacing: 0.01em;
         box-shadow: 0 -1px 6px rgba(0,0,0,0.03);
+        font-family: 'Josefin Sans', Arial, sans-serif;
+        padding: 0;
       }
-      .site-footer-custom .footer-content {
+      .footer-main {
+        display: flex;
+        justify-content: space-between;
+        align-items: flex-start;
+        max-width: 1200px;
         margin: 0 auto;
+        padding: 28px 24px 10px 24px;
+        flex-wrap: wrap;
+      }
+      .footer-section {
+        flex: 1 1 200px;
+        min-width: 180px;
+        margin-bottom: 18px;
+        text-align: left;
+      }
+      .footer-label {
+        display: block;
+        font-weight: 700;
+        font-size: 1.08rem;
+        margin-bottom: 10px;
+        color: #b03a2e;
+        letter-spacing: 0.01em;
+      }
+      .footer-icons a {
+        color: #b03a2e;
+        font-size: 1.3rem;
+        margin-right: 12px;
+        transition: color 0.2s;
+      }
+      .footer-icons a:last-child {
+        margin-right: 0;
+      }
+      .footer-icons a:hover {
+        color: #d32f2f;
+      }
+      .footer-links {
+        list-style: none;
+        padding: 0;
+        margin: 0;
+      }
+      .footer-links li {
+        margin-bottom: 7px;
+      }
+      .footer-links a {
+        color: #111;
+        text-decoration: none;
+        transition: color 0.2s;
+        font-size: 1.04rem;
+      }
+      .footer-links a:hover {
+        color: #b03a2e;
+        text-decoration: underline;
+      }
+      .footer-bottom {
+        text-align: center;
+        padding: 10px 0 14px 0;
+        font-size: 1.08rem;
         font-weight: 500;
         letter-spacing: 0.01em;
+        border-top: 1px solid #e2d6c7;
+        background: #D4C9BE;
+      }
+      @media (max-width: 991.98px) {
+        .footer-main {
+          flex-direction: column;
+          align-items: stretch;
+          padding: 22px 10px 6px 10px;
+        }
+        .footer-section {
+          min-width: 0;
+          margin-bottom: 16px;
+          text-align: center;
+        }
+        .footer-label {
+          margin-bottom: 7px;
+        }
+        .footer-bottom {
+          padding: 10px 0 12px 0;
+        }
       }
     </style>
 
